[package]
name = "console"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
edition = "2021"

[dependencies]
common = { path = "../common" }
cldi = { git = "https://github.com/cita-cloud/cloud-cli", branch = "lib_for_console" }
cloud-config = { git = "https://github.com/cita-cloud/cloud-config", branch = "lib_for_console" }
cita_cloud_proto = { package = "cita_cloud_proto", git = "https://github.com/cita-cloud/cloud-common-rs.git" }
cloud-util = { package = "cloud-util", git = "https://github.com/cita-cloud/cloud-common-rs.git" }
tokio = { version = "1.21", features = ["full"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
