[package]
name = "console"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.26", features = ["full"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }

common = { path = "../common" }
cldi = { git = "https://github.com/cita-cloud/cloud-cli" }
cloud-config = { git = "https://github.com/cita-cloud/cloud-config" }
cita_cloud_proto = { package = "cita_cloud_proto", git = "https://github.com/cita-cloud/cloud-common-rs" }
cloud-util = { package = "cloud-util", git = "https://github.com/cita-cloud/cloud-common-rs" }
